--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "1.0.0",
   "dependencies": {},
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-connect": "^0.8.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-uglify": "^0.5.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "jshint-stylish": "^0.4.0",
-    "time-grunt": "^0.4.0",
-    "load-grunt-tasks": "^0.4.0",
-    "autoprefixer": "^5.1.0",
-    "grunt-postcss": "^0.3.0",
-    "autoprefixer-core": "^5.1.7",
-    "grunt-scss-lint": "^0.3.4"
+    "grunt": "~0.4.5",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-connect": "~0.10.1",
+    "grunt-contrib-jshint": "~0.11.2",
+    "grunt-contrib-sass": "~0.9.2",
+    "grunt-contrib-uglify": "~0.9.1",
+    "grunt-contrib-watch": "~0.6.1",
+    "jshint-stylish": "~2.0.0",
+    "time-grunt": "~1.2.1",
+    "load-grunt-tasks": "~3.2.0",
+    "autoprefixer": "~5.2.0",
+    "autoprefixer-core": "~5.1.7",
+    "grunt-postcss": "~0.3.0",
+    "grunt-scss-lint": "~0.3.6"
   },
   "engines": {
     "node": ">=0.10.0"
