--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -7,5 +7,8 @@
 # https://github.com/causes/scss-lint/blob/master/config/default.yml
 
 linters:
+  NestingDepth:
+    max_depth: 4
+
   SelectorFormat:
-    ignored_names: [ addthis_sharing_toolbox ]
+    convention: hyphenated_BEM
